--- a/DreamSeekr/Base.lproj/Main.storyboard
+++ b/DreamSeekr/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LhX-96-x27">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3Cc-gF-Op7">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -57,10 +57,17 @@
                             <outlet property="delegate" destination="LhX-96-x27" id="mbb-2z-pNJ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="Sw7-iE-TgI">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ksC-G6-mzE">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="Tgo-hg-jPR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LD4-wK-OCg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-466" y="-765"/>
+            <point key="canvasLocation" x="472.80000000000001" y="-765.06746626686663"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -145,7 +152,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="202" y="-765"/>
+            <point key="canvasLocation" x="1140" y="-765.06746626686663"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YFr-Ta-0c3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Cc-gF-Op7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6Wc-ow-46P">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="LhX-96-x27" kind="relationship" relationship="rootViewController" id="lxt-80-ZKM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WbC-o5-qT2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-466.39999999999998" y="-765.06746626686663"/>
         </scene>
     </scenes>
     <resources>
