viewlarning o'zaro malumot almashinishi

--- a/DreamSeekr/Base.lproj/Main.storyboard
+++ b/DreamSeekr/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fu1-OS-VWe">
                                             <rect key="frame" x="167" y="11" width="42" height="21"/>
-                                            <color key="backgroundColor" red="0.12323915155440412" green="0.12323915155440412" blue="0.12323915155440412" alpha="0.74559859154929575" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" red="0.12323915155440412" green="0.12323915155440412" blue="0.12323915155440412" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
